add hotel image et chambres unittest
